# app/models/match_touch.rb
@@ -1,0 +1,5 @@
+class MatchTouch < ApplicationRecord
+  belongs_to :match
+  belongs_to :player
+  belongs_to :team
+end
